# emotion-classification-capstone

./: .gitignore  README.md  build_notebook.py  pyproject.toml  requirements.txt
notebook/: emotion_classification.ipynb
src/: app.py  data.py  models.py  train_baseline.py  train_lstm.py  train_transformer.py  viz.py  vocab.py
