[project]
name = "emotion-classification-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.25",
    "datasets>=2.15",
    "gradio>=4.0",
    "joblib>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "ruff>=0.15.20",
    "scikit-learn>=1.3",
    "seaborn>=0.12",
    "torch>=2.1",
    "transformers>=4.35",
]
